{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 14,
  "lineage": "5b145228-4526-9e4c-36d1-5c7e958d7e6b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mlops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06e78a71af43ef21a",
            "arn": "arn:aws:ec2:us-east-1:137787521782:instance/i-0b4cefcd5f8ec0d7d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b4cefcd5f8ec0d7d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "mlops-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-074e13b71e232ac7e"
              }
            ],
            "primary_network_interface_id": "eni-074e13b71e232ac7e",
            "private_dns": "ip-10-0-1-185.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.185",
            "public_dns": "ec2-98-92-185-21.compute-1.amazonaws.com",
            "public_ip": "98.92.185.21",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:137787521782:key/bb7a4518-9868-4db4-af48-53784e49f3cd",
                "throughput": 125,
                "volume_id": "vol-0381f349527547786",
                "volume_size": 60,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0381b9db81c0f688d",
            "tags": {
              "Name": "mlops-foundations-vm",
              "Project": "mlops-foundations"
            },
            "tags_all": {
              "Name": "mlops-foundations-vm",
              "Project": "mlops-foundations"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b21836d58d00a90a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137787521782",
            "id": "i-0b4cefcd5f8ec0d7d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.mlops",
            "aws_subnet.public",
            "aws_vpc.mlops",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mlops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137787521782:internet-gateway/igw-05b1970656ca0bb55",
            "id": "igw-05b1970656ca0bb55",
            "owner_id": "137787521782",
            "region": "us-east-1",
            "tags": {
              "Name": "mlops-foundations-igw",
              "Project": "mlops-foundations"
            },
            "tags_all": {
              "Name": "mlops-foundations-igw",
              "Project": "mlops-foundations"
            },
            "vpc_id": "vpc-03b2d1728a9dc2440"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137787521782",
            "id": "igw-05b1970656ca0bb55",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.mlops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137787521782:route-table/rtb-0e48b5f1ec9aae327",
            "id": "rtb-0e48b5f1ec9aae327",
            "owner_id": "137787521782",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05b1970656ca0bb55",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mlops-foundations-public-rt",
              "Project": "mlops-foundations"
            },
            "tags_all": {
              "Name": "mlops-foundations-public-rt",
              "Project": "mlops-foundations"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b2d1728a9dc2440"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137787521782",
            "id": "rtb-0e48b5f1ec9aae327",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.mlops",
            "aws_vpc.mlops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0345af09a84dcd81c",
            "region": "us-east-1",
            "route_table_id": "rtb-0e48b5f1ec9aae327",
            "subnet_id": "subnet-0381b9db81c0f688d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137787521782",
            "id": "rtbassoc-0345af09a84dcd81c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.mlops",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.mlops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mlops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137787521782:security-group/sg-0b21836d58d00a90a",
            "description": "Security group for MLOps Foundations VM",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b21836d58d00a90a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Airflow",
                "from_port": 9001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MLflow",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Web API",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "178.235.193.38/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mlops-foundations-sg",
            "name_prefix": "",
            "owner_id": "137787521782",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mlops-foundations-sg",
              "Project": "mlops-foundations"
            },
            "tags_all": {
              "Name": "mlops-foundations-sg",
              "Project": "mlops-foundations"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b2d1728a9dc2440"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137787521782",
            "id": "sg-0b21836d58d00a90a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.mlops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137787521782:subnet/subnet-0381b9db81c0f688d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0381b9db81c0f688d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "137787521782",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "mlops-foundations-public-subnet",
              "Project": "mlops-foundations"
            },
            "tags_all": {
              "Name": "mlops-foundations-public-subnet",
              "Project": "mlops-foundations"
            },
            "vpc_id": "vpc-03b2d1728a9dc2440"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137787521782",
            "id": "subnet-0381b9db81c0f688d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.mlops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mlops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137787521782:vpc/vpc-03b2d1728a9dc2440",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e3cddea1014eeaa9",
            "default_route_table_id": "rtb-0329080228c014940",
            "default_security_group_id": "sg-0ad3e87e9e8ed426a",
            "dhcp_options_id": "dopt-0f61474d50b2e1ed8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03b2d1728a9dc2440",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0329080228c014940",
            "owner_id": "137787521782",
            "region": "us-east-1",
            "tags": {
              "Name": "mlops-foundations-vpc",
              "Project": "mlops-foundations"
            },
            "tags_all": {
              "Name": "mlops-foundations-vpc",
              "Project": "mlops-foundations"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "137787521782",
            "id": "vpc-03b2d1728a9dc2440",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}